--- a/server.properties
+++ b/server.properties
@@ -25,7 +25,7 @@ enable-status=true
 allow-flight=false
 broadcast-rcon-to-ops=true
 view-distance=10
-server-ip=127.0.0.1
+server-ip=m.detac.tech
 resource-pack-prompt=
 allow-nether=true
 server-port=5555
