--- a/server.properties
+++ b/server.properties
@@ -25,10 +25,10 @@ enable-status=true
 allow-flight=false
 broadcast-rcon-to-ops=true
 view-distance=10
-server-ip=m.detac.tech
+server-ip=0.0.0.0
 resource-pack-prompt=
 allow-nether=true
-server-port=5555
+server-port=25565
 enable-rcon=false
 sync-chunk-writes=true
 op-permission-level=4
